--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   25%  {background-color:yellow; left:200px; top:0px;}
   50%  {background-color:green; left:200px; top:200px;}
   75%  {background-color:blue; left:0px; top:200px;}
-  100% {background-color:orange;0px; top:0px;}
+  100% {background-color:orange; left:0px; top:0px;}
 }
 /* Standard syntax */
 @keyframes example {
@@ -40,7 +40,7 @@
   25%  {background-color:violet; left:20px; top:0px;}
   50%  {background-color:magenta; left:200px; top:400px;}
   75%  {background-color:grey; left:0px; top:299px;}
-  100% {background-color:; left:0px; top:0px;}
+  100% {background-color:white; left:0px; top:0px;}
 }
 </style>
 
