--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     
   <!--Main layout-->
   <main class="mt-5 pt-5">
-    <div class="container">
+    <div class="cotainer">
 
       <!--Section: Jumbotron-->
       <section class="card wow fadeIn" style="background-image: url(https://mdbootstrap.com/img/Photos/Others/background3.jpg);">
@@ -172,18 +172,16 @@
         <div class="card-body text-white text-center py-5 px-5 my-5">
 
           <h1 class="mb-4">
-            <strong>Learn Bootstrap 4 with MDB</strong>
+            <strong>Never Ending Travel</strong>
           </h1>
           <p>
-            <strong>Best & free guide of responsive web design</strong>
+            <strong>Your Guide To The World</strong>
           </p>
-          <p class="mb-4">
-            <strong>The most comprehensive tutorial for the Bootstrap 4. Loved by over 500 000 users. Video and written
-              versions available. Create your own, stunning website.</strong>
+            <strong>
+          <p class="mb-4"> Get Travel Tips, read stories and stay up to date with the latest trends in the world
           </p>
-          <a target="_blank" href="https://mdbootstrap.com/education/bootstrap/" class="btn btn-outline-white btn-lg">Start
-            free tutorial
-            <i class="fas fa-graduation-cap ml-2"></i>
+          <a target="_blank" href="https://mdbootstrap.com/education/bootstrap/" class="btn btn-outline-white btn-lg">Explore
+            <i class="fas fa-travel-cap ml-2"></i>
           </a>
 
         </div>
