--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
       <div class="container">
 
         <!-- Brand -->
-        <a class="navbar-brand waves-effect" href="https://mdbootstrap.com/docs/jquery/" target="_blank">
-      <h1 id="heading"> Never Ending Travel</h1>
+        <a class="navbar-brand waves-effect" https://ameerhamzahah.github.io/webco.io/" target="_blank">
+       Never Ending Travel
         </a>
 
 
@@ -119,15 +119,15 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link waves-effect" href="https://mdbootstrap.com/docs/jquery/" target="_blank">About MDB</a>
+              <a class="nav-link waves-effect" href="https://mdbootstrap.com/docs/jquery/" target="_blank">About NET</a>
             </li>
             <li class="nav-item">
               <a class="nav-link waves-effect" href="https://mdbootstrap.com/docs/jquery/getting-started/download/"
-                target="_blank">Free download</a>
+                target="_blank">Destinations</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link waves-effect" href="https://mdbootstrap.com/education/bootstrap/" target="_blank">Free
-                tutorials</a>
+              <a class="nav-link waves-effect" href="https://mdbootstrap.com/education/bootstrap/" target="_blank">News
+            </a>
             </li>
           </ul>
 
