--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <div class="container">
 
         <!-- Brand -->
-        <a class="navbar-brand waves-effect" https://ameerhamzahah.github.io/webco.io/" target="_blank">
+        <a class="navbar-brand waves-effect" https://ameerhamzahah.github.io/netcom.io/" target="_blank">
        Never Ending Travel
         </a>
 
