--- a/index.html
+++ b/index.html
@@ -130,12 +130,7 @@
             </a>
             </li>
           </ul>
-<!-- Google Custom Search Element →
-<div id=”cse” style=”width:100%;”>Loading</div>
-<script src=”http://www.google.com/jsapi” type=”text/javascript”></script>
-<script type=”text/javascript”>google.load(‘search’, ‘1’);
-          google.setOnLoadCallback(function(){var cse = new google.search.
-          CustomSearchControl();cse.draw(‘cse’);}, true);</script>
+
             </li>
           </ul>
 
@@ -240,6 +235,12 @@
               <a>
                 <strong>This is title of the news</strong>
               </a>
+                                                                                                                     <!-- Google Custom Search Element →
+<div class=”cse” style=”width:100%;”>Loading</div>
+<script src=”http://www.google.com/jsapi” type=”text/javascript”></script>
+<script type=”text/javascript”>google.load(‘search’, ‘1’);
+          google.setOnLoadCallback(function(){var cse = new google.search.
+          CustomSearchControl();cse.draw(‘cse’);}, true);</script>
             </h3>
             <p> Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime
               placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus.
@@ -527,12 +528,7 @@
       <a href="https://mdbootstrap.com/education/bootstrap/" target="_blank"> MDBootstrap.com </a>
     </div>
     <!--/.Copyright-->
-                                                                            <!-- Google Custom Search Element →
-<div id=”cse” style=”width:100%;”>Loading</div>
-<script src=”http://www.google.com/jsapi” type=”text/javascript”></script>
-<script type=”text/javascript”>google.load(‘search’, ‘1’);
-          google.setOnLoadCallback(function(){var cse = new google.search.
-          CustomSearchControl();cse.draw(‘cse’);}, true);</script>
+
 
   </footer>
   <!--/.Footer-->
