--- a/destinations.html
+++ b/destinations.html
@@ -26,7 +26,7 @@
             <div class="container">
 
                 <!-- Brand -->
-                <a class="navbar-brand waves-effect" href="https://ameerhamzahah.github.io/webco.io/" target="_blank">
+                <a class="navbar-brand waves-effect" href="https://ameerhamzahah.github.io/netcom.io/" target="_blank">
                     <strong class="blue-text">Never Ending Travel</strong>
                 </a>
 
