--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
       <div class="container">
 
         <!-- Brand -->
-        <a class="navbar-brand waves-effect" https://ameerhamzahah.github.io/netcom.io/" target="_blank">
-       Never Ending Travel
-        </a>
+                       <a class="navbar-brand waves-effect" href="https://ameerhamzahah.github.io/webco.io/" target="_blank">
+                    <strong class="blue-text">Never Ending Travel</strong>
+                </a>
 
 
         <!-- Collapse -->
@@ -235,12 +235,7 @@
               <a>
                 <strong>This is title of the news</strong>
               </a>
-                                                                                                                     <!-- Google Custom Search Element →
-<div class=”cse” style=”width:100%;”>Loading</div>
-<script src=”http://www.google.com/jsapi” type=”text/javascript”></script>
-<script type=”text/javascript”>google.load(‘search’, ‘1’);
-          google.setOnLoadCallback(function(){var cse = new google.search.
-          CustomSearchControl();cse.draw(‘cse’);}, true);</script>
+ 
             </h3>
             <p> Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime
               placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus.
