--- a/index.html
+++ b/index.html
@@ -95,6 +95,12 @@
     <!-- Navbar -->
     <nav class="navbar fixed-top navbar-expand-lg navbar-light white scrolling-navbar">
       <div class="container">
+        <a class="navbar-brand" href="https://ameerhamzahah.github.io/netcom.io/">
+      <div class="logo-image">
+            <img src="./assets2/Endless.png" class="img-fluid">
+      </div>
+</a>
+
 
         <!-- Brand -->
                        <a class="navbar-brand waves-effect" href="https://ameerhamzahah.github.io/webco.io/" target="_blank">
