--- a/index.html
+++ b/index.html
@@ -84,6 +84,16 @@
         }
         
     </style>
+  <style>
+     .logo-image{
+    width: 46px;
+    height: 46px;
+    border-radius: 50%;
+    overflow: hidden;
+    margin-top: -6px;
+}
+
+  </style>
 
 </head>
 
