--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
     </style>
   <style>
      .logo-image{
-    width: 46px;
-    height: 46px;
+    width: 5%;
+  
     border-radius: 50%;
     overflow: hidden;
     margin-top: -6px;
