--- a/index.html
+++ b/index.html
@@ -138,11 +138,11 @@
               <a class="nav-link waves-effect" href="https://mdbootstrap.com/docs/jquery/" target="_blank">About NET</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link waves-effect" href="https://mdbootstrap.com/docs/jquery/getting-started/download/"
+              <a class="nav-link waves-effect" ./destinations.html"
                 target="_blank">Destinations</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link waves-effect" href="https://mdbootstrap.com/education/bootstrap/" target="_blank">News
+              <a class="nav-link waves-effect "./stories.html" target="_blank">Stories
             </a>
             </li>
           </ul>
@@ -194,10 +194,10 @@
     <div class="col-sm-5"><b> News</b> </div>
   </div>
   <div class="row">
-  <div class="col-sm"> <a href="./destinations.html"><em>Destinations</em></a></div>
+  <div class="col-sm"> <a href="./destinations.html"><em>NEWS</em></a></div>
     
-    <div class="col-sm">  <a href="./stories.html"> <strong>Stories</strong> </a></div>
-    <div class="col-sm"><a href="https://images.dawn.com/news/1182474"> <b> News</b></a></div>
+    <div class="col-sm">  <a href="./stories.html"> <strong>NEWS</strong> </a></div>
+    <div class="col-sm"><a href="https://images.dawn.com/news/1182474"> <b> NEWS</b></a></div>
   </div>
      
     </article>
