--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
             <img src="./assets2/Endless.png" class="img-fluid">
       </div>
 </a>
-
+      </div>
+      </div>
 
         <!-- Brand -->
                        <a class="navbar-brand waves-effect" href="https://ameerhamzahah.github.io/webco.io/" target="_blank">
