--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       <div class="container">
         <a class="navbar-brand" href="https://ameerhamzahah.github.io/netcom.io/">
       <div class="logo-image">
-            <img src="./assets2/Endless.png" class="img-fluid">
+            <img src="./assets2/Endless.png">
       </div>
 </a>
       </div>
