--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
     <!-- Navbar -->
     <nav class="navbar fixed-top navbar-expand-lg navbar-light white scrolling-navbar">
       <div class="container">
-        <a class="navbar-brand" href="https://ameerhamzahah.github.io/netcom.io/" style="width:15%">
+        <a class="navbar-brand" href="https://ameerhamzahah.github.io/netcom.io/">
       <div class="logo-image">
-            <img src="./assets2/Endless.png">
+            <img src="./assets2/Endless.png" style="width:15%">
       </div>
 </a>
       </div>
