--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <div class="container">
         <a class="navbar-brand" href="https://ameerhamzahah.github.io/netcom.io/">
       <div class="logo-image">
-            <img src="./assets2/Endless.png" style="width:5%" align="right">
+            <img src="./assets2/Endless.png" style="width:5%" align="left">
       </div>
 </a>
       </div>
@@ -106,7 +106,7 @@
 
         <!-- Brand -->
                        <a class="navbar-brand waves-effect" href="https://ameerhamzahah.github.io/webco.io/" target="_blank">
-                    <strong class="blue-text">Never Ending Travel</strong>
+                    <strong class="blue-text" align="right">Never Ending Travel</strong>
                 </a>
 
 
