--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <!-- Brand -->
                        <a class="navbar-brand waves-effect" href="https://ameerhamzahah.github.io/webco.io/" target="_blank">
                          
-                   <DIV align="left"> <strong class="blue-text">Never Ending Travel</strong> <DIV align="right">
+                   <DIV align="left"> <strong class="blue-text">Never Ending Travel</strong> </DIV>
                 </a>
 
 
