--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <!-- Brand -->
                        <a class="navbar-brand waves-effect" href="https://ameerhamzahah.github.io/webco.io/" target="_blank">
                          
-                   <DIV align="left"> <strong class="blue-text">Never Ending Travel</strong> </DIV>
+                   <DIV align="left"> <strong class="blue-text">Never Ending Travel</strong> 
                 </a>
 
 
@@ -137,6 +137,7 @@
             <li class="nav-item">
               <a class="nav-link waves-effect "./stories.html" target="_blank">Stories
             </a>
+              </DIV>
             </li>
           </ul>
 
