--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
   <!--Main Navigation-->
   <header>
-
+ <DIV align="left">
     <!-- Navbar -->
     <nav class="navbar fixed-top navbar-expand-lg navbar-light white scrolling-navbar">
       <div class="container">
@@ -107,7 +107,7 @@
         <!-- Brand -->
                        <a class="navbar-brand waves-effect" href="https://ameerhamzahah.github.io/webco.io/" target="_blank">
                          
-                   <DIV align="left"> <strong class="blue-text">Never Ending Travel</strong> 
+                   <strong class="blue-text">Never Ending Travel</strong> 
                 </a>
 
 
