--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <div class="container">
         <a class="navbar-brand" href="https://ameerhamzahah.github.io/netcom.io/">
       <div class="logo-image">
-            <img src="./assets2/Endless.png" style="width:10%" align="left">
+            <img src="./assets2/Endless.png" style="width:10%">
       </div>
 </a>
       </div>
