--- a/index.html
+++ b/index.html
@@ -84,7 +84,15 @@
         }
         
     </style>
- 
+ <style>
+    .logo-image{
+    width: 10%;
+    height: auto;
+    border-radius: 50%;
+    overflow: hidden;
+    margin-top: -6px;
+}
+  </style>
 
 </head>
 
@@ -92,13 +100,13 @@
 
   <!--Main Navigation-->
   <header>
- <DIV align="left">
+ 
     <!-- Navbar -->
     <nav class="navbar fixed-top navbar-expand-lg navbar-light white scrolling-navbar">
       <div class="container">
         <a class="navbar-brand" href="https://ameerhamzahah.github.io/netcom.io/">
       <div class="logo-image">
-            <img src="./assets2/Endless.png" style="width:10%">
+            <img src="./assets2/Endless.png">
       </div>
 </a>
       </div>
@@ -137,7 +145,7 @@
             <li class="nav-item">
               <a class="nav-link waves-effect "./stories.html" target="_blank">Stories
             </a>
-              </DIV>
+              
             </li>
           </ul>
 
