--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
  <style>
     .logo-image{
     width: 10%;
-    
+    height: 10%;
     border-radius: 50%;
     overflow: hidden;
     margin-top: -6px;
