--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
     </style>
  <style>
     .logo-image{
-    width: 10%;
-    height: 10%;
+    width: 10px;
+    height: 10px;
     border-radius: 50%;
     overflow: hidden;
     margin-top: -6px;
