--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       
 
         <!-- Brand -->
-                       <a class="navbar-brand waves-effect" href="https://ameerhamzahah.github.io/webco.io/" target="_blank">
+                       <a class="navbar-brand waves-effect" target="_blank">
                          
                    <strong class="blue-text">Never Ending Travel</strong> 
                 </a>
