--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
   100% {background-color:white; left:0px; top:0px;}
 }
 </style>
+  
 
     <style>
     
@@ -84,7 +85,11 @@
         }
         
     </style>
-
+<style>
+  .logo-image{border-collapse:collapse;}
+.logo-image td{padding:0}
+.logo-image img{display:block}
+  </style>
 
 </head>
 
