--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
   .logo-image{border-collapse:collapse;}
 .logo-image td{padding:0}
 .logo-image img{display:block}
+  .logo-image float:left;
   </style>
 
 </head>
