--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Never Ending Travel</title>
   <meta name="author" content="Ameer Hamza">
 <meta name="description" content="Your Guide To The World">
+  <meta name="keywords" content="travel, blog, reviews, stories, destinations">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
   <!-- Bootstrap core CSS -->
